--- a/index.html
+++ b/index.html
@@ -595,6 +595,24 @@
                                     Play Now
                                 </a>
                             </div>
+                            {/* Pixel Draw */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/PixelDraw.png"
+                                    alt="PixelDraw"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">Pixel Draw</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Draw Pixel Art with a simple, intuitive interface and share your creations.
+                                </p>
+                                <a
+                                    href="https://nifftyswiggle.github.io/Web3-Tools/PixelDraw.html"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Draw 
+                                </a>
+                            </div>
                             {/* Strategic Play */}
                             <div className="project-card p-6">
                                 <img
@@ -631,22 +649,22 @@
                                     Buy Now
                                 </a>
                             </div>
-                            {/* Placeholder for Additional Project */}
+                            {/* Soon */}
                             <div className="project-card p-6">
                                 <img
                                     src="./assets/Soon.png"
-                                    alt="Coming Soon"
+                                    alt="Soon"
                                     className="project-image mb-4"
                                 />
                                 <h3 className="text-xl font-semibold text-white mb-2">Coming Soon</h3>
                                 <p className="text-gray-400 mb-4">
-                                    Get ready for the next big Web3 or gaming innovation.
+                                    More Tools and Games are on the way! Stay tuned for exciting updates.
                                 </p>
                                 <a
                                     href="#contact"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
-                                    Stay Updated
+                                    Soon
                                 </a>
                             </div>
                         </div>
@@ -760,5 +778,4 @@
         }
     </script>
 </body>
-
 </html>
