--- a/index.html
+++ b/index.html
@@ -649,6 +649,42 @@
                                     Buy Now
                                 </a>
                             </div>
+                            {/* Update Metadata */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/MetadataUpdate.png"
+                                    alt="MetaData"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">Update Metadata</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Edit and Change bulk MetaData
+                                </p>
+                                <a
+                                    href="https://nifftyswiggle.github.io/Web3-Tools/UpdateMetadata.html"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Update
+                                </a>
+                            </div>
+                            {/* MPC */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/MPC.png"
+                                    alt="MPC"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">MPC</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Simple MPC with beatpad, secquencer, effects and more.
+                                </p>
+                                <a
+                                    href="https://nifftyswiggle.github.io/Web3-Tools/MPC.html"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Create
+                                </a>
+                            </div>
                             {/* Soon */}
                             <div className="project-card p-6">
                                 <img
