--- a/index.html
+++ b/index.html
@@ -539,6 +539,24 @@
                                     Try Now
                                 </a>
                             </div>
+                            {/* Non-Custodial Stake */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/NonCustodialStake.png"
+                                    alt="Gaia Ecosystem Non-Custodial Stake"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">Non-Custodial Stake</h3>
+                                <p className="text-gray-400 mb-4">
+                                   Create and manage non-custodial NFT staking pools with customizable rewards and durations.
+                                </p>
+                                <a
+                                    href="https://nifftyswiggle.github.io/Web3-Tools/NonCustodialStake.html"
+                                    className="cta-button inline-block"
+                                >
+                                    Stake Now
+                                </a>
+                            </div>
                             {/* Game: Chess Game */}
                             <div className="project-card p-6">
                                 <img
