--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                                     A decentralized chess game with tokenized rewards and seamless multiplayer battles.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Game-Hub/games/Chess/Chess.html"
+                                    href="https://nifftyswiggle.github.io/Strategic-Play/chess.html"
                                     className="cta-button inline-block"
                                     target="_blank"
                                     rel="noopener noreferrer"
