--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                                     alt="Airdrop and Staking Tool"
                                     className="project-image mb-4"
                                 />
-                                <h3 className="text-xl font-semibold text-white mb-2">Airdrop & Staking</h3>
+                                <h3 className="text-xl font-semibold text-white mb-2">Token Airdrop</h3>
                                 <p className="text-gray-400 mb-4">
                                     Streamline token airdrops and staking with a secure, user-friendly Web3 platform.
                                 </p>
@@ -592,7 +592,7 @@
                                     href="https://nifftyswiggle.github.io/Web3-Tools/AirDrop.html"
                                     className="cta-button inline-block"
                                 >
-                                    Explore Tool
+                                    Airdrop
                                 </a>
                             </div>
                             {/* Game Hub */}
