--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="icon" type="image/png" href="./assets/NSlogo.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/NSlogo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/NSlogo.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NifftySwiggle Studio</title>
