--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                 />
                                 <h3 className="text-xl font-semibold text-white mb-2">NFT Generator</h3>
                                 <p className="text-gray-400 mb-4">
-                                    Create unique NFT collections with customizable layers, rarity weights, and IPFS-ready metadata.
+                                    Create unique NFT collections with customizable layers with no code.
                                 </p>
                                 <a
                                     href="https://nifftyswiggle.github.io/Web3-Tools/NFTgenerator.html"
@@ -696,7 +696,7 @@
                                 />
                                 <h3 className="text-xl font-semibold text-white mb-2">MPC</h3>
                                 <p className="text-gray-400 mb-4">
-                                    Simple MPC with beatpad, secquencer, effects and more.
+                                    Simple MPC with beatpad, sequencer, effects, and more
                                 </p>
                                 <a
                                     href="https://nifftyswiggle.github.io/Web3-Tools/MPC.html"
