--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                     Create unique NFT collections with customizable layers with no code.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/NFTgenerator.html"
+                                    href="/nftgenerator"
                                     className="cta-button inline-block"
                                 >
                                     Try Now
@@ -553,7 +553,7 @@
                                    Create and manage non-custodial NFT staking pools with customizable rewards and durations.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/NonCustodialStake.html"
+                                    href="/stake"
                                     className="cta-button inline-block"
                                 >
                                     Stake Now
@@ -571,7 +571,7 @@
                                     A decentralized chess game with tokenized rewards and seamless multiplayer battles.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Strategic-Play/chess.html"
+                                    href="/chess"
                                     className="cta-button inline-block"
                                     target="_blank"
                                     rel="noopener noreferrer"
@@ -591,7 +591,7 @@
                                     Streamline token airdrops and staking with a secure, user-friendly Web3 platform.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/AirDrop.html"
+                                    href="/airdrop"
                                     className="cta-button inline-block"
                                 >
                                     Airdrop
@@ -609,7 +609,7 @@
                                     A new arcade gaming hub with exciting features and community-driven content.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Game-Hub/"
+                                    href="/gamehub"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Play Now
@@ -627,7 +627,7 @@
                                     Draw Pixel Art with a simple, intuitive interface and share your creations.
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/PixelDraw.html"
+                                    href="/pixeldraw"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Draw 
@@ -681,7 +681,7 @@
                                     Edit and Change bulk MetaData
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/UpdateMetadata.html"
+                                    href="/updatemetadata"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Update
@@ -699,7 +699,7 @@
                                     Simple MPC with beatpad, sequencer, effects, and more
                                 </p>
                                 <a
-                                    href="https://nifftyswiggle.github.io/Web3-Tools/MPC.html"
+                                    href="/mpc"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Create
