Update stake link to point to external site

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                                    Create and manage non-custodial NFT staking pools with customizable rewards and durations.
                                 </p>
                                 <a
-                                    href="/stake"
+                                    href="https://www.gaiaecosystem.com/stake.html"
                                     className="cta-button inline-block"
                                 >
                                     Stake Now
