--- a/index.html
+++ b/index.html
@@ -523,6 +523,60 @@
                             Creations
                         </h2>
                         <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto">
+                             {/* Strategic Play */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/StrategicPlay.png"
+                                    alt="Strategic Play"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">Strategic Play</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Web 3 gaming project with strategic gameplay and community engagement.
+                                </p>
+                                <a
+                                    href="https://crypto.com/nft/profile/bane4life?tab=created"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Browse
+                                </a>
+                            </div>
+                            {/* PitBits */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/PitBits.png"
+                                    alt="PitBits"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">PitBits</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Pixel art NFT collection with unique traits and community-driven features.
+                                </p>
+                                <a
+                                    href="https://allstake.io/launches/pitbits"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Buy Now
+                                </a>
+                            </div>
+                              {/* Gaia */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/GaiaLogo.png"
+                                    alt="Gaia"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">PitBits</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Gaia Ecosystem powers creators with NFTs, staking, and smart contracts.
+                                </p>
+                                <a
+                                    href="https://www.gaiaecosystem.com/"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Visit
+                                </a>
+                            </div>
                             {/* Web3 Tool: NifftySwiggles NFT Generator */}
                             <div className="project-card p-6">
                                 <img
@@ -579,7 +633,7 @@
                                     Play Now
                                 </a>
                             </div>
-                            {/* Web3 Tool: Airdrop/Staking Tool */}
+                            {/* Web3 Tool: Airdrop Tool */}
                             <div className="project-card p-6">
                                 <img
                                     src="./assets/Airdrop.png"
@@ -633,42 +687,7 @@
                                     Draw 
                                 </a>
                             </div>
-                            {/* Strategic Play */}
-                            <div className="project-card p-6">
-                                <img
-                                    src="./assets/StrategicPlay.png"
-                                    alt="Strategic Play"
-                                    className="project-image mb-4"
-                                />
-                                <h3 className="text-xl font-semibold text-white mb-2">Strategic Play</h3>
-                                <p className="text-gray-400 mb-4">
-                                    Web 3 gaming project with strategic gameplay and community engagement.
-                                </p>
-                                <a
-                                    href="https://crypto.com/nft/profile/bane4life?tab=created"
-                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
-                                >
-                                    Browse
-                                </a>
-                            </div>
-                            {/* PitBits */}
-                            <div className="project-card p-6">
-                                <img
-                                    src="./assets/PitBits.png"
-                                    alt="PitBits"
-                                    className="project-image mb-4"
-                                />
-                                <h3 className="text-xl font-semibold text-white mb-2">PitBits</h3>
-                                <p className="text-gray-400 mb-4">
-                                    Pixel art NFT collection with unique traits and community-driven features.
-                                </p>
-                                <a
-                                    href="https://allstake.io/launches/pitbits"
-                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
-                                >
-                                    Buy Now
-                                </a>
-                            </div>
+                           
                             {/* Update Metadata */}
                             <div className="project-card p-6">
                                 <img
