--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                                     alt="Gaia"
                                     className="project-image mb-4"
                                 />
-                                <h3 className="text-xl font-semibold text-white mb-2">PitBits</h3>
+                                <h3 className="text-xl font-semibold text-white mb-2">Gaia Ecosystem</h3>
                                 <p className="text-gray-400 mb-4">
                                     Gaia Ecosystem powers creators with NFTs, staking, and smart contracts.
                                 </p>
