--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                     Web 3 gaming project with strategic gameplay and community engagement.
                                 </p>
                                 <a
-                                    href="https://crypto.com/nft/profile/bane4life?tab=created"
+                                    href="https://strategicplay.xyz"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Browse
