--- a/index.html
+++ b/index.html
@@ -577,6 +577,24 @@
                                     Visit
                                 </a>
                             </div>
+                            {/* CDC Swiggle Scan */}
+                            <div className="project-card p-6">
+                                <img
+                                    src="./assets/swigglescan.png"
+                                    alt="cdc swigglesscan"
+                                    className="project-image mb-4"
+                                />
+                                <h3 className="text-xl font-semibold text-white mb-2">CDC Swiggle Scan</h3>
+                                <p className="text-gray-400 mb-4">
+                                    Scan Crypto.com NFTs with usernames. Gather, Download and share your collections.
+                                </p>
+                                <a
+                                    href="/swigglescan"
+                                    className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
+                                >
+                                    Scan
+                                </a>
+                            </div>
                             {/* Swiggle Scan */}
                             <div className="project-card p-6">
                                 <img
