--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                                     Scan Crypto.com NFTs with usernames. Gather, Download and share your collections.
                                 </p>
                                 <a
-                                    href="/swigglescan"
+                                    href="/cdcswigglescan"
                                     className="cta-button inline-block bg-gray-700 hover:bg-gray-600"
                                 >
                                     Scan
