--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                             {/* CDC Swiggle Scan */}
                             <div className="project-card p-6">
                                 <img
-                                    src="./assets/swigglescan.png"
+                                    src="./assets/cdcswigglescan.png"
                                     alt="cdc swigglesscan"
                                     className="project-image mb-4"
                                 />
