--- a/index.html
+++ b/index.html
@@ -263,6 +263,20 @@
             background: rgba(255, 255, 255, 0.2);
         }
 
+        .shimmer-text {
+            background: linear-gradient(90deg, #ffffff 0%, #3b82f6 25%, #ec4899 50%, #3b82f6 75%, #ffffff 100%);
+            background-size: 200% auto;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: shimmer 3s linear infinite;
+        }
+
+        @keyframes shimmer {
+            0% { background-position: 0% center; }
+            100% { background-position: 200% center; }
+        }
+
         @media (max-width: 640px) {
             .hero {
                 text-align: center;
@@ -513,6 +527,28 @@
                                 <a href="#contact" className="cta-button bg-gray-700 hover:bg-gray-600">
                                     Connect with me
                                 </a>
+                            </div>
+                        </div>
+                    </section>
+
+                    {/* Nomads Mint Section */}
+                    <section className="section">
+                        <div className="max-w-4xl mx-auto text-center">
+                            <h2 className="text-3xl sm:text-4xl font-bold text-white font-orbitron mb-4 shimmer-text">
+                                Nomads is live for mint
+                            </h2>
+                            <img 
+                                src="./assets/nomads.png" 
+                                alt="Nomads Logo" 
+                                className="w-32 h-32 mx-auto mb-6"
+                                style={{filter: 'drop-shadow(0 0 10px rgba(236, 72, 153, 0.7))'}}
+                            />
+                            <div className="project-card p-6">
+                                <iframe 
+                                    id='iframe-widget' 
+                                    src='https://0xbd11e8799e1d48fe607b6a471c66de84522e49c1_143.nfts2.me/?widget=classic' 
+                                    style={{height: '414px', width: '100%', border: 'none'}}
+                                />
                             </div>
                         </div>
                     </section>
