--- a/index.html
+++ b/index.html
@@ -543,7 +543,17 @@
                             <h2 className="text-3xl sm:text-4xl font-bold text-white font-orbitron mb-4 shimmer-text">
                                 Nomads is live for mint
                             </h2>
-                           
+                            <p className="text-lg text-gray-300 mb-6">
+                                Discover more about Nomads and join the community!
+                            </p>
+                            <a
+                                href="https://nomadshq.xyz"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                className="cta-button inline-block mb-6"
+                            >
+                                Visit Nomads HQ
+                            </a>
                             <div className="project-card p-6">
                                 <iframe 
                                     id='iframe-widget' 
